# CMake-Library-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html
cmake/: CMakLibraryTemplateConfig.cmake.in
cmake/modules/: CPackConfig.cmake
